# PhoenixFS

./: .clang-format  .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp  network.cpp  network.h
common/: CMakeLists.txt  metadata.h  utils.cpp  utils.h
server/: CMakeLists.txt  main.cpp  network.cpp  network.h
storage/: new.txt  test.txt
